updated events controllers to accept httpservlet requests