@@ -42,7 +42,7 @@ public class GetUsersService implements Query<Void, List<UserDTO>> {
                         // Filter users by parishId
                         users = users.stream()
                                 .filter(user -> parishId.equals(user.getParishId()))
-                                .collect(Collectors.toList());
+                                .toList();
                     }
                 }
             }
